# cysaurus

./: .gitignore  CMakeLists.txt  README.md  notes.md
other/app/: runVideoRaptorBatch.cpp  runVideoRaptorThumbnails.cpp
other/test/general/: testJSON.cpp
other/test/gui/src/: _wrappers.hpp  test.cpp
other/test/hardware_acceleration/: hwaccel.c
other/test/video/: batch.cpp  testVideoRaptor.cpp
src/: guiRaptor.cpp  guiRaptor.hpp  test.cpp
src/alignment/: alignment.cpp  alignment.hpp  alignmentCommon.cpp  alignmentCommon.hpp  alignmentOther.cpp  alignmentOther.hpp
src/core/: Window.hpp  core.cpp  core.hpp  printer.hpp  profile.hpp
src/core/patterns/: PatternTextInfo.hpp  _wrappers.hpp  complexPatterns.hpp  patterns.cpp  simplePatterns.hpp
src/fonts/: monospace.cpp  serif.cpp
src/gui/: gui.cpp  gui.hpp
src/gui/core/: Event.hpp  Window.hpp
src/gui/core/patterns/: DrawingType.hpp  Pattern.hpp  PatternTextInfo.hpp  complexPatterns.hpp  patterns.cpp  simplePatterns.hpp
src/gui/fonts/: sansSerif.cpp
src/internal/: ellipseShape.hpp
src/lib/: reference.md
src/video/: videoRaptor.cpp  videoRaptor.hpp
src/video/core/: HWDevices.hpp  Stream.hpp  ThumbnailContext.hpp  Video.hpp  VideoInfo.hpp  VideoRaptorContext.hpp  VideoReport.hpp  compatWindows.hpp  core.cpp  errorCodes.hpp  utils.hpp
